# ionizer

./: .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  README.md  hi.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml
Ionizer.egg-info/: PKG-INFO  SOURCES.txt
doc/: index.rst
doc/source/: conf.py  index.rst
doc/source/code/: transform_utils.rst  transforms.rst
docs/: conf.py  index.rst
docs/api/: decompositions.rst  identity_hunter.rst  ops.rst  transforms.rst  utils.rst
docs/notes/: basic_usage.rst  installation.rst
docs/source/: decompositions.rst  ops.rst
ionizer/: __init__.py  decompositions.py  identity_hunter.py  ops.py  transform_utils.py  transforms.py  utils.py
ionizer/resources/: double_gate_identities.pkl  triple_gate_identities.pkl
tests/: conftest.py  test_decompositions.py  test_gpi2.py  test_identity_hunter.py  test_ops.py  test_transform_utils.py  test_transforms.py  test_utils.py
