[tool.poetry]
name = "ionizer"
version = "0.3.0"
description = "PennyLane tools for compilation into trapped-ion native gates."
authors = ["UBC Quantum Software and Algorithms Research Lab"]
repository = "https://github.com/QSAR-UBC/ionizer/"
license = "MIT"
readme = "README.md"
keywords = ["quantum-computing", "quantum-software"]
include = [{ path = "ionizer/resources"}]

[tool.poetry.dependencies]
python = "^3.10"
pennylane = "^0.37"


[tool.poetry.group.dev.dependencies]
pytest = "8.2"
black = "24.2"
pre-commit = "3.7.1"
ruff = "^0.5.0"

[tool.poetry.group.docs.dependencies]
sphinx = "8.0.2"
sphinx-rtd-theme = "3.0.0rc1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.codespell]
skip = "poetry.lock"
